static education-experience

--- a/tech stack/index.html
+++ b/tech stack/index.html
@@ -13,61 +13,61 @@
         <h1 class="atitle">My <span>Tech Stack </span></h1>
         <div class="image-gallery">
             <div class="image-item">
-                <img src="html5.svg" alt="Image 1">
+                <img src="./assets/html5.svg" alt="Image 1">
                 <p>HTML</p>
             </div>
             <div class="image-item">
-                <img src="css3.svg" alt="Image 2">
+                <img src="./assets/css3.svg" alt="Image 2">
                 <p>CSS</p>
             </div>
             <div class="image-item">
-                <img src="file-type-js.svg" alt="Image 3">
+                <img src="./assets/file-type-js.svg" alt="Image 3">
                 <p>JavaScript</p>
             </div>
             <div class="image-item">
-                <img src="php.svg" alt="Image 4">
+                <img src="./assets/php.svg" alt="Image 4">
                 <p>PHP</p>
             </div>
             <div class="image-item">
-                <img src="nodejs.svg" alt="Image 5">
+                <img src="./assets/nodejs.svg" alt="Image 5">
                 <p>Node JS</p>
             </div>
             <div class="image-item">
-                <img src="react-fill.svg" alt="Image 6">
+                <img src="./assets/react-fill.svg" alt="Image 6">
                 <p>React</p>
             </div>
             <div class="image-item">
-                <img src="express.svg" alt="Image 7">
+                <img src="./assets/express.svg" alt="Image 7">
                 <p>Express</p>
             </div>
         </div>
         <div class="image-gallery">
             <div class="image-item">
-                <img src="scrumalliance.svg" alt="Image 8">
+                <img src="./assets/scrumalliance.svg" alt="Image 8">
                 <p>Scrum</p>
             </div>
             <div class="image-item">
-                <img src="laravel.svg" alt="Image 9">
+                <img src="./assets/laravel.svg" alt="Image 9">
                 <p>Laravel</p>
             </div>
             <div class="image-item">
-                <img src="bootstrap.svg" alt="Image 10">
+                <img src="./assets/bootstrap.svg" alt="Image 10">
                 <p>BootStrap</p>
             </div>
             <div class="image-item">
-                <img src="wordpress.svg" alt="Image 11">
+                <img src="./assets/wordpress.svg" alt="Image 11">
                 <p>WordPress</p>
             </div>
             <div class="image-item">
-                <img src="linux.svg" alt="Image 12">
+                <img src="./assets/linux.svg" alt="Image 12">
                 <p>Linux</p>
             </div>
             <div class="image-item">
-                <img src="id-management.svg" alt="Image 13">
+                <img src="./assets/id-management.svg" alt="Image 13">
                 <p>Project <br>Management</p>
             </div>
             <div class="image-item">
-                <img src="sql-query.svg" alt="Image 14">
+                <img src="./assets/sql-query.svg" alt="Image 14">
                 <p>SQL</p>
             </div>
         </div>
